- upgraded to 8.2 and SDK 34.

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,8 +11,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        jcenter()
-
+//        mavenCentral()
     }
 }
 rootProject.name = "Testing Paylink SDK Application"
